Fixed maven build argLine parameter