@@ -95,17 +95,6 @@
       </properties>
     </profile>
     <profile>
-      <id>jdk15ge-add-open</id>
-      <activation>
-        <jdk>[15,</jdk>
-      </activation>
-      <properties>
-        <argLine>--add-opens java.base/java.lang=ALL-UNNAMED
-          --add-opens java.base/java.math=ALL-UNNAMED
-          --add-opens java.base/java.util=ALL-UNNAMED</argLine>
-      </properties>
-    </profile>
-    <profile>
       <id>jdk15ge-simple</id>
       <build>
         <plugins>
